source/objects/Customer_Story__c/Customer_Story__c.object-meta.xml
<CustomObject>
    <label>Customer Story</label>
    <nameField>
        <label>Customer Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>