source/objects/Customer_Story__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Stories</relationshipLabel>
    <relationshipName>Customer_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>