source/objects/Customer_Story__c/fields/Benefits_from_using_Bluescape__c.field-meta.xml
<CustomField>
    <fullName>Benefits_from_using_Bluescape__c</fullName>
    <label>Benefits from using Bluescape</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>