source/objects/Customer_Story__c/fields/Business_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Business_Challenges__c</fullName>
    <label>Business Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>