source/objects/Customer_Story__c/fields/Why_Did_they_Choose_Bluescape__c.field-meta.xml
<CustomField>
    <fullName>Why_Did_they_Choose_Bluescape__c</fullName>
    <label>Why Did they Choose Bluescape?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>